[tool.poetry]
name = "lift"
version = "0.1.0"
description = "Lift pass kata"
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
pymysql = "^1.1.0"
coverage = "^7.4.4"
black = "^24.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
